--- a/application/src/main/resources/default.properties
+++ b/application/src/main/resources/default.properties
@@ -3,7 +3,8 @@ smtp.port=2525
 smtp.to=erik@codemate.se
 smtp.from=application@fairviewiq.com
 base.url=http://localhost:8080
-neo4j.root=/opt/neo4j-data/lab
+neo4j.root=/tmp/test
+neo4j.index=true
 report.root=/opt/reports/silverback
 jasper.reports.compile.keep.java.file=false
 jasper.reports.compile.temp=/tmp
