Massive cleanup and upgrade to spring 3.0. Reports functional. HTML reports suffer from nullpx bug.

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -124,6 +124,12 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
+            <version>${commons-digester.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
             <version>${quartz.version}</version>
