--- a/application/src/main/resources/default.properties
+++ b/application/src/main/resources/default.properties
@@ -1,10 +1,10 @@
 smtp.host=127.0.0.1
 smtp.port=2525
 smtp.to=erik@codemate.se
-smtp.from=application@fairviewiq.com
+smtp.from=application@inferoquest.com
 base.url=http://localhost:8080
-neo4j.root=/Users/henrik/github/fairview/cloner/src/test/data/foma_ut
+neo4j.root=/opt/neo4j-data/inferoquest-demo
 neo4j.index=true
-report.root=/opt/reports/silverback
+report.root=/opt/reports/inferoquest
 jasper.reports.compile.keep.java.file=false
-jasper.reports.compile.temp=/tmp
+jasper.reports.compile.temp=/tmp/jrcompile
