--- a/application/src/main/resources/default.properties
+++ b/application/src/main/resources/default.properties
@@ -3,8 +3,8 @@ smtp.port=2525
 smtp.to=erik@codemate.se
 smtp.from=application@inferoquest.com
 base.url=http://localhost:8080
-neo4j.root=/tmp/test2
+neo4j.root=/opt/neo4j-data/inferoquest-demo
 neo4j.index=true
-report.root=/tmp
+report.root=/opt/reports/inferoquest
 jasper.reports.compile.keep.java.file=false
 jasper.reports.compile.temp=/tmp/jrcompile
