--- a/cloner/pom.xml
+++ b/cloner/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <artifactId>fairview-cloner</artifactId>
-    <version>11.1</version>
+    <version>${project.parent.version}</version>
     <name>Fairview Cloner</name>
     <packaging>jar</packaging>
 
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>se.codemate.commons</groupId>
             <artifactId>codemate-neo4j</artifactId>
-            <version>${codemate-spring.version}</version>
+            <version>${codemate-commons.version}</version>
         </dependency>
 
     </dependencies>
