FVW-53 fixed a bug causing multiple dictionarys to be created on startup if db was empty. Also changed applicationcontext so that only one instance of fairviewajaxcontroller is created at startup

--- a/application/src/main/resources/default.properties
+++ b/application/src/main/resources/default.properties
@@ -3,7 +3,7 @@ smtp.port=2525
 smtp.to=erik@codemate.se
 smtp.from=application@inferoquest.com
 base.url=http://localhost:8080
-neo4j.root=/tmp/svenskamassan
+neo4j.root=/tmp/test
 neo4j.index=true
 report.root=/tmp
 jasper.reports.compile.keep.java.file=false
