Added basic reports

--- a/application/src/main/resources/default.properties
+++ b/application/src/main/resources/default.properties
@@ -4,7 +4,8 @@ smtp.to=erik@codemate.se
 smtp.from=application@inferoquest.com
 base.url=http://localhost:8080
 neo4j.root=/tmp/svenskamassan
-neo4j.index=true
+neo4j.index=false
 report.root=../reports/source
+swap.root=../reports/swap
 jasper.reports.compile.keep.java.file=false
 jasper.reports.compile.temp=/tmp/jrcompile
